# rag-poisoning-architecture-bench

./: .gitignore  CONVENTIONS.md  LICENSE  README.md  README.raw.md  ROADMAP.md  pyproject.toml  requirements.txt
analysis/: README.md  analysis.ipynb
paper/: paper.tex  paper_draft_working.tex  references.bib
paper/tables/: asr_crak.tex  asr_naive.tex  decomposition.tex  decomposition_cc.tex  judge_per_category.tex  paired_contingency.tex  seven_cat_distribution.tex
scripts/: download_data.sh  generate_paper.sh  prepare_data.sh  prepare_embeddings.sh  run_all.sh  run_analysis.sh  run_experiments.sh  run_tests.sh  setup_environment.sh
src/: __init__.py
src/architectures/: __init__.py  agentic_rag.py  madam_rag.py  qa_system.py  recursive_lm.py  rlm_rag.py  utils.py  vanilla_rag.py
src/data/: __init__.py  create_correct_answers.py  create_corruptrag_ak_poisoned_docs.py  create_incorrect_answers_poisoned_docs.py  create_poisoned_datasets.py  create_questions.py  download_datasets.py  filter_gold_questions.py  utils.py
src/embeddings/: __init__.py  build_vector_indexes.py  embed_datasets.py  embeddings.py  vector_store.py
src/experiments/: __init__.py  cleanup_volume.py  experiment.py  llm-judge-prompt.md  llm_judge.py  noise_filter.py  orchestrator.py  run_judge_local.py  run_judge_modal.py  run_noise_modal.py  upload_data.py
tests/: __init__.py  conftest.py  test_analysis_paper.py  test_data_pipeline.py  test_experiment.py  test_imports_paths.py  test_judge_noise.py  test_modal_data.py  test_orchestrator.py  test_orchestrator_modal.py  test_scripts.py  test_timeouts.py
tests/golden/scripts/: prepare_data.sh.dry-run.txt  prepare_embeddings.sh.dry-run.txt  run_all.sh.analysis-only.dry-run.txt  run_all.sh.dry-run.txt  run_experiments.sh.dry-run.txt
