[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-poisoning-architecture-bench"
version = "0.0.1"
requires-python = ">=3.12,<3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Hard cap on per-test runtime. Primary purpose: catch OpenMP / native-code
# deadlocks (torch + faiss libomp double-load) fast, instead of hanging the
# suite for hours. `timeout_method = "thread"` uses a watchdog thread, which
# works even when the main thread is wedged in C code where Python signal
# handlers can't run.
timeout = 900
timeout_method = "thread"
# Silence upstream FAISS/SWIG DeprecationWarnings on Python 3.12+:
# SWIG-generated builtin types (SwigPyPacked, SwigPyObject, swigvarlink)
# lack a __module__ attribute, which Python 3.12 newly warns about.
# Tracked upstream at https://github.com/facebookresearch/faiss/issues/3526.
filterwarnings = [
    "ignore:builtin type (SwigPyPacked|SwigPyObject|swigvarlink) has no __module__ attribute:DeprecationWarning",
]
